unpackaged/main/default/objects/simplesms__SMS_Campaign_Response_Rule__c/simplesms__SMS_Campaign_Response_Rule__c.object-meta.xml
<CustomObject>
    <description>A rule that defines how to respond to an incoming SMS message that is related to a campaign.</description>
    <label>SMS Campaign Response Rule</label>
    <nameField>
        <displayFormat>Rule-{0000}</displayFormat>
        <label>SMS Campaign Response Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Campaign Response Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>