unpackaged/main/default/objects/simplesms__SMS_Campaign_Response_Rule__c/fields/simplesms__Auto_Response_Message_Lead__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Auto_Response_Message_Lead__c</fullName>
    <description>The message from the Auto Response Template for Leads.</description>
    <inlineHelpText>The message from the Auto Response Template for Leads.</inlineHelpText>
    <label>Auto Response Message Lead</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>