unpackaged/main/default/objects/simplesms__SMS_Campaign_Response_Rule__c/fields/simplesms__Auto_Response_Template_Contact__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Auto_Response_Template_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The template to use when replying to a Contact.</description>
    <inlineHelpText>The template to use when replying to a Contact.</inlineHelpText>
    <label>Auto Response Template (Contact)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>simplesms__SMS_Template__c.simplesms__Object__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>simplesms__SMS_Template__c</referenceTo>
    <relationshipLabel>SMS Campaign Response Rules Contacts</relationshipLabel>
    <relationshipName>SMS_Campaign_Response_Rules_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>