unpackaged/main/default/objects/simplesms__SMS_Campaign_Response_Rule__c/fields/simplesms__Auto_Response_Template_Lead__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Auto_Response_Template_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The template used when replying to a Lead.</description>
    <inlineHelpText>The template used when replying to a Lead.</inlineHelpText>
    <label>Auto Response Template (Lead)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>simplesms__SMS_Template__c.simplesms__Object__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>simplesms__SMS_Template__c</referenceTo>
    <relationshipLabel>SMS Campaign Response Rules Leads</relationshipLabel>
    <relationshipName>SMS_Campaign_Response_Rules_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>