unpackaged/main/default/objects/simplesms__SMS_Campaign_Response_Rule__c/fields/simplesms__Campaign__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Campaign__c</fullName>
    <description>The Campaign these rules correspond to.</description>
    <inlineHelpText>The Campaign these rules correspond to.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>SMS Campaign Response Rules</relationshipLabel>
    <relationshipName>SMS_Campaign_Response_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>