unpackaged/main/default/objects/simplesms__SMS_Campaign_Response_Rule__c/fields/simplesms__Is_Final_Response__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Is_Final_Response__c</fullName>
    <description>True if this is the final response in the sequence.</description>
    <formula>simplesms__Campaign__r.simplesms__Total_Response_Rules__c = simplesms__Sequence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if this is the final response in the sequence.</inlineHelpText>
    <label>Is Final Response</label>
    <type>Checkbox</type>
</CustomField>