unpackaged/main/default/objects/simplesms__SMS_Campaign_Response_Rule__c/fields/simplesms__Save_Response_Contact__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Save_Response_Contact__c</fullName>
    <description>The name of the Contact field where the SMS Message body will be saved.</description>
    <inlineHelpText>The name of the Contact field where the SMS Message body will be saved.</inlineHelpText>
    <label>Save Response (Contact)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>