unpackaged/main/default/objects/simplesms__SMS_Campaign_Response_Rule__c/fields/simplesms__Sequence__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Sequence__c</fullName>
    <description>The order that this rule is executed within the list of rules for this Campaign.</description>
    <inlineHelpText>The order that this rule is executed within the list of rules for this Campaign.</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>