unpackaged/main/default/objects/simplesms__SMS_Campaign_Response_Rule__c/validationRules/simplesms__Sequence_Cannot_be_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>simplesms__Sequence_Cannot_be_Null</fullName>
    <active>true</active>
    <description>The Sequence must be populated.</description>
    <errorConditionFormula>ISBLANK( simplesms__Sequence__c )</errorConditionFormula>
    <errorDisplayField>simplesms__Sequence__c</errorDisplayField>
    <errorMessage>Sequence cannot be blank.</errorMessage>
</ValidationRule>